--- a/app/src/main/res/layout/list_item_track.xml
+++ b/app/src/main/res/layout/list_item_track.xml
@@ -2,15 +2,62 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_gravity="fill_horizontal"
+    android:layout_marginTop="10dp">
 
-    <TextView
-        android:id="@+id/trackTextView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+        android:layout_height="match_parent"
+        app:cardCornerRadius="4dp"
+        app:cardBackgroundColor="@color/transparent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="2dp"
+        >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            android:background="@drawable/shape"
+            android:gravity="center"
+            android:backgroundTint="@color/transparent"
+            >
+
+
+            <ImageView
+                android:id="@+id/musicImage"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+
+                app:srcCompat="@android:drawable/btn_star_big_on" />
+
+
+            <TextView
+                android:id="@+id/musicTitle"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:textColor="@color/FlatWhite"
+                android:text="TextView"
+                />
+
+            <ImageButton
+                android:id="@+id/toggleButton"
+                android:layout_width="2dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#00E65100"
+                android:backgroundTint="#CA370A"
+                android:contentDescription="TODO"
+                android:gravity="center"
+                android:hapticFeedbackEnabled="true"
+                android:src="@android:drawable/ic_media_play"
+
+                />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
