--- a/app/src/main/res/layout/activity_inside_playlist.xml
+++ b/app/src/main/res/layout/activity_inside_playlist.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/backward_color"
     tools:context=".Activities.InsidePlaylistActivity">
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -33,15 +32,16 @@
                 app:theme="@style/ToolbarColoredBackArrow"
                 app:titleTextColor="@color/FlatWhite">
 
-                <ImageView
-                    android:id="@+id/menu_button"
+                <ImageButton
+                    android:id="@+id/deletePlaylist"
                     android:layout_width="?attr/actionBarSize"
                     android:layout_height="?attr/actionBarSize"
                     android:layout_gravity="end"
                     android:background="@drawable/ripple_oval"
                     android:padding="18dp"
-                    app:srcCompat="@drawable/ic_more_horiz_black_24dp"
+                    app:srcCompat="@drawable/delete_favorite"
                     app:tint="@color/FlatWhite" />
+
             </androidx.appcompat.widget.Toolbar>
 
             <RelativeLayout
@@ -49,7 +49,6 @@
                 android:layout_height="wrap_content"
                 android:background="#44000000"
                 app:layout_collapseMode="pin">
-
                 <com.example.rhythmix.ui.BlurImageViewChildConstraintLayout
                     android:id="@+id/background_constraint"
                     android:layout_width="match_parent"
@@ -60,8 +59,6 @@
                     app:shadowDeltaRight="-6dp"
                     app:shadowDeltaTop="4dp"
                     tools:ignore="MissingClass">
-
-
                     <ImageView
                         android:id="@+id/art"
                         android:layout_width="139dp"
